tests/baselines/reference/extension.errors.txt
==== tests/cases/compiler/extension.ts (4 errors) ====
    interface I {
        x;
    }
    
    interface I {
        y;
    }
    
    declare module M {
        export class C {
            public p:number;
        }
    }
    
    declare module M {
        export extension class C {
        ~~~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
                         ~~~~~
!!! error TS1005: ';' expected.
               ~~~~~~~~~
!!! error TS2095: Could not find symbol 'extension'.
                               ~
!!! error TS2000: Duplicate identifier 'C'.
            public pe:string;
        }
    }
    
    var c=new M.C();
    c.pe;
    c.p;
    var i:I;
    i.x;
    i.y;
    
    